<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="762" >

	<include
	    android:layout_width="match_parent"
	    android:layout_height="0dp"
	    android:layout_weight="60"
	    layout="@layout/title_layout" />

    <LinearLayout
        android:id="@+id/layout_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dip"
        android:orientation="horizontal" >

            <TextView
                android:id="@+id/textId"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/id"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputId"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dip" >

            <TextView
                android:id="@+id/textPw"
                android:layout_width="40dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/pw"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <EditText
                android:id="@+id/inputPw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPassword"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_check"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:weightSum="2" >

            <CheckBox
                android:id="@+id/checkAutoFill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/auto_fill" />

            <CheckBox
                android:id="@+id/checkAutoLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/auto_login" />
        </LinearLayout>

        <Button
            android:id="@+id/buttonLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"/>

</LinearLayout>